cmake_minimum_required(VERSION 3.29)
project(Arreglos C)

set(CMAKE_C_STANDARD 17)

add_executable(Arreglos main.c
        Ejercicio_3.c)
add_executable(Asignaciones Ejercicio_Asignacion.c)
add_executable(Asignaciones_2 Asignacion_2.c)
add_executable(Ejercicio_1 Ejercicio_Arreglos.c)
add_executable(Ejercicio_2 Ejercicio_2.c)
add_executable(Ejercicio_3 Ejercicio_3.c)